Title block spacing fix

--- a/wp-content/themes/mct/styles/modules/_image-location-filter.scss
+++ b/wp-content/themes/mct/styles/modules/_image-location-filter.scss
@@ -1,4 +1,5 @@
 .image-location-filter{
+	padding-top:$base*6;
 	background:$lightestGrey;
 
 	.main-wrapper{
