--- a/wp-content/themes/mct/styles/modules/_title-block.scss
+++ b/wp-content/themes/mct/styles/modules/_title-block.scss
@@ -10,6 +10,7 @@
 
 	&__title, &__sub-text, & p{
 		color:$primFontColor;
+		line-height:1.3em;
 	}
 
 	&--light-bg{
